Added Navbar ( change header.fxml and HomeController as you please just be carefull and don't touch others parts) and fixed ur problem boubaker in case it's not working in the last push