@@ -55,12 +55,12 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>2.11.0</version>
+            <version>2.10.1</version>
         </dependency>
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-web</artifactId>
-            <version>23.0.1</version>
+            <version>24</version>
         </dependency>
 
         <!-- Gluon Charm Glisten (for TextField) -->
@@ -163,20 +163,7 @@
                     <target>24</target>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.openjfx</groupId>
-                <artifactId>javafx-maven-plugin</artifactId>
-                <version>0.0.8</version>
-                <configuration>
-                    <mainClass>test.Boubaker.BoubakerMain</mainClass>
-                    <options>
-                        <option>--add-modules</option>
-                        <option>javafx.controls,javafx.fxml,javafx.web,javafx.base,javafx.graphics,javafx.media</option>
-                        <option>--enable-native-access</option>
-                        <option>ALL-UNNAMED</option>
-                    </options>
-                </configuration>
-            </plugin>
+
         </plugins>
     </build>
 </project>
